--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,12 @@
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="a simple page">
+      <title> article one </title>
+    </head>
+  <body>
+      <h1> today is independence day </h1>
+      <div>
+         <p>Independence Day is annually celebrated on 15 August, as a national holiday in India commemorating the nation's independence from the United Kingdom on 15 August 1947, the UK Parliament passed the Indian Independence Act 1947 transferring legislative sovereignty to the Indian Constituent Assembly. India still retained King George VI as head of state until its transition to full republican constitution. India attained independence following the Independence Movement noted for largely nonviolent resistance and civil disobedience led by the Indian National Congress (INC). Independence coincided with the partition of India, in which the British India was divided along religious lines into the Dominions of India and Pakistan; the partition was accompanied by violent riots and mass casualties, and the displacement of nearly 15 million people due to religious violence. On 15 August 1947, the Prime Minister, Jawaharlal Nehru raised the Indian national flag above the Lahori Gate of the Red Fort in Delhi. On each subsequent Independence Day, the prime minister customarily raises the flag and gives an address to the nation.</p>
+  </body>
 </html>
